# avark

./: .env.sample  .gitignore  CLAUDE.md  NOTICE  PRIVACY.md  README.md  SECURITY.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
docs/: VERIFYING.md  release-signing-key.asc
githooks/: pre-commit  pre-push
scripts/: android-dev.mjs  build-android-dev-icons.mjs  version-bump.mjs
src/: App.css  App.tsx  AspConfig.tsx  Onboarding.tsx  QrScanner.tsx  ReceiveSheet.tsx  RestoreWallet.tsx  SeedBackup.tsx  SendSheet.tsx  Splashscreen.tsx  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ark.rs  lendaswap.rs  lib.rs  main.rs  secure_storage.rs  wallet.rs
src-tauri/src/commands/: coins.rs  lendaswap.rs  lightning.rs  mod.rs  nostr.rs  pin.rs  receive.rs  recovery.rs  send.rs  settings.rs  share.rs  splash.rs  wallet.rs
src-tauri/src/nostr/: mod.rs  relays.rs
src/components/: AmountField.tsx  AppLayout.tsx  BottomNav.tsx  ExitingVtxoCard.tsx  IdentityChip.tsx  LightningSwaps.tsx  NextRoundCountdown.tsx  NpubIdenticon.tsx  PinPad.tsx  RailChip.tsx  SelectedCoinsSendDrawer.tsx  TransactionRow.tsx  VtxoCard.tsx  WalletConnectButton.tsx  rails.tsx
src/components/recovery/: Skeleton.tsx  SweepForm.tsx  sweepAmount.test.ts  sweepAmount.ts
src/components/settings/: CurrencyPicker.tsx  EsploraSelector.tsx  FiatTickerCard.tsx  NsecBackup.tsx  PackageBroadcastEndpoint.tsx  SeedPhraseBackup.tsx
src/components/swap/: SwapIcons.tsx
src/context/: FiatContext.tsx  NostrIdentityContext.tsx  PinLockContext.tsx  ThemeContext.tsx  WalletConnectContext.tsx  WalletContext.tsx
src/hooks/: useKeyboardInset.ts  useLnInvoice.ts
src/lib/: tauriFetch.ts
src/lib/lendaswap/: client.ts  reconcile.ts
src/routes/: boot-route.tsx  coins-route.tsx  dashboard-route.tsx  onboarding-route.tsx  profile-route.tsx  recover-ln-route.tsx  recovery-route.tsx  settings-route.tsx  swap-checkout-route.tsx  swap-history-route.tsx  swap-route.tsx  transactions-route.tsx
src/utils/: amount.test.ts  amount.ts  confetti.ts  fetchFailureStreak.test.ts  fetchFailureStreak.ts  fiatRates.test.ts  fiatRates.ts  format.test.ts  format.ts  lendaswapErrors.ts  npub.test.ts  npub.ts  receiveFeedback.ts
