[package]
name = "avark"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "avark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2", default-features = false }
tokio = { version = "1", default-features = false, features = ["sync", "fs", "time"] }

# Ark protocol
ark-client = { git = "https://github.com/arkade-os/rust-sdk.git", tag = "v0.8.0", default-features = false, features = ["tls-webpki-roots", "sqlite"] }
ark-core = { git = "https://github.com/arkade-os/rust-sdk.git", tag = "v0.8.0" }
ark-bdk-wallet = { git = "https://github.com/arkade-os/rust-sdk.git", tag = "v0.8.0" }
ark-grpc = { git = "https://github.com/arkade-os/rust-sdk.git", tag = "v0.8.0" }

# Bitcoin / BIP39
bip39 = { version = "2", features = ["rand", "zeroize"] }
bitcoin = { version = "0.32.7", features = ["rand", "serde"] }
rand = "0.8"
zeroize = "1"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
url = "2"
esplora-client = { version = "0.11.0", default-features = false, features = ["async", "async-https", "tokio"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
subtle = "2"
hex = "0.4"

# Vendor OpenSSL for Android cross-compilation (ark-bdk-wallet pulls in native-tls via esplora-client)
openssl = { version = "0.10", features = ["vendored"], optional = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"] }

[target.'cfg(target_os = "android")'.dependencies]
# Used by the `splash_ready` command to call back into MainActivity.kt and
# dismiss the Android SplashScreen once React has painted. See
# commands/splash.rs and MainActivity.kt.
jni = "0.21"
ndk-context = "0.1"

[features]
vendored-openssl = ["dep:openssl"]

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"       
panic = "abort"       
